<resources>
    <string name="app_name">PicMap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_email">Email</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="subtitle">Sometimes tolerance is not a virtue.</string>
    <string name="image_title">Images</string>
    <string name="hide_subtitle">Hide Subtitle</string>

</resources>
