<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout android:weightSum="4"
    android:orientation="vertical"
    android:background="@color/grey_100"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="3">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/icon"
        android:src="@drawable/firebase_lockup_400"
        android:contentDescription="@string/desc_firebase_lockup"
        style="@style/ThemeOverlay.FirebaseIcon"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/title_text"
        android:theme="@style/ThemeOverlay.MyTitleText"
        android:text="@string/emailpassword_title_text"
        android:layout_marginBottom="@dimen/title_bottom_margin"/>

    <TextView
        android:id="@+id/status"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/signed_out"/>

    <TextView
        android:id="@+id/detail"
        style="@style/ThemeOverlay.MyTextDetail"
        tools:text="Firebase User ID: 123456789abc"/>

</LinearLayout>


    <RelativeLayout
        android:background="@color/grey_300"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:gravity="center_vertical"
        android:layout_weight="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/email_password_fields"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/field_email"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/field_password"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>

</LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/email_password_buttons"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_below="@+id/email_password_fields">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/email_sign_in_button"
            android:layout_weight="1"
            android:text="@string/sign_in"/>

        <Button
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/email_create_account_button"
        android:layout_weight="1"
        android:text="@string/create_account"/>

</LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/sign_out_button"
        android:text="@string/sign_out"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>

</LinearLayout>